.vscode/allianceuat_compare/force-app/main/default/objects/tc9_pr__Pay_Transaction__c/fields/Adjustment_Reason__c.field-meta.xml
<CustomField>
    <fullName>Adjustment_Reason__c</fullName>
    <description>Reason for the automated adjustment applied to this pay transaction. This reason was automatically copied from the associated timesheet adjustment.</description>
    <inlineHelpText>Reason for the automated adjustment applied to this pay transaction. This reason was automatically copied from the associated timesheet adjustment.</inlineHelpText>
    <label>Adjustment Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_et__Credit_Reason_Picklists</valueSetName>
    </valueSet>
</CustomField>