.vscode/allianceuat_compare/force-app/main/default/objects/tc9_pr__Pay_Transaction__c/fields/agx_Payment_Entity__c.field-meta.xml
<CustomField>
    <fullName>agx_Payment_Entity__c</fullName>
    <description>Payment Entity Name</description>
    <formula>tc9_pr__Payment_Entity__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Payment Entity Name</inlineHelpText>
    <label>Payment Entity</label>
    <type>Text</type>
</CustomField>