.vscode/allianceuat_compare/force-app/main/default/objects/tc9_pr__Pay_Transaction__c/fields/agx_Payroll_Tax_Location__c.field-meta.xml
<CustomField>
    <fullName>agx_Payroll_Tax_Location__c</fullName>
    <description>Payee Payroll Tax Location</description>
    <formula>tc9_pr__Payee__r.tc9_pr__Primary_Location__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Payee Payroll Tax Location</inlineHelpText>
    <label>Payroll Tax Location</label>
    <type>Text</type>
</CustomField>