.vscode/allianceuat_compare/force-app/main/default/objects/tc9_pr__Pay_Transaction__c/fields/Alliance_Branch__c.field-meta.xml
<CustomField>
    <fullName>Alliance_Branch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Branch</label>
    <referenceTo>Branch__c</referenceTo>
    <relationshipLabel>Pay Transactions</relationshipLabel>
    <relationshipName>Pay_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>