.vscode/allianceuat_compare/force-app/main/default/objects/tc9_pr__Pay_Transaction__c/fields/Base_Pay_Rate__c.field-meta.xml
<CustomField>
    <fullName>Base_Pay_Rate__c</fullName>
    <inlineHelpText>Base Pay rate from the associated MPR record</inlineHelpText>
    <label>Base Pay Rate</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>