.vscode/allianceuat_compare/force-app/main/default/objects/tc9_pr__Pay_Transaction__c/fields/Candidate_Branch_Name__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Branch_Name__c</fullName>
    <description>The branch name as it appears on the candidate record.</description>
    <formula>tc9_pr__Employee__r.Branch_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The branch name as it appears on the candidate record.</inlineHelpText>
    <label>Candidate Branch Name</label>
    <type>Text</type>
</CustomField>