.vscode/allianceuat_compare/force-app/main/default/objects/tc9_pr__Pay_Transaction__c/fields/Casual_Loading_x_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Casual_Loading_x_Quantity__c</fullName>
    <formula>tc9_pr__Assignment_Rate__r.tc9_et__Rate_Calculator_Line__r.tc9_et__Casual_Loading_Amount__c* tc9_pr__Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Casual Loading x Quantity</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>