.vscode/allianceuat_compare/force-app/main/default/objects/tc9_pr__Pay_Transaction__c/fields/Created_From_Pay_Transaction_ID__c.field-meta.xml
<CustomField>
    <fullName>Created_From_Pay_Transaction_ID__c</fullName>
    <label>Created From Pay Transaction ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>