.vscode/allianceuat_compare/force-app/main/default/objects/tc9_pr__Pay_Transaction__c/fields/Invoice__c.field-meta.xml
<CustomField>
    <fullName>Invoice__c</fullName>
    <description>Main Invoice Link</description>
    <formula>HYPERLINK(
&quot;/&quot; &amp; tc9_et__Invoice_Item__r.tc9_et__Invoice__c,
tc9_et__Invoice_Item__r.tc9_et__Invoice__r.Name
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Defines the Invoice associated with this Pay Transaction</inlineHelpText>
    <label>Invoice</label>
    <type>Text</type>
</CustomField>