.vscode/allianceuat_compare/force-app/main/default/objects/tc9_pr__Pay_Transaction__c/fields/Invoice_First_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Invoice_First_Sent_Date__c</fullName>
    <description>The first sent date of the invoice related to this transaction.</description>
    <formula>tc9_et__Invoice_Item__r.tc9_et__Invoice__r.tc9_et__First_Sent__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The first sent date of the invoice related to this transaction.</inlineHelpText>
    <label>Invoice First Sent Date</label>
    <type>Date</type>
</CustomField>