.vscode/allianceuat_compare/force-app/main/default/objects/tc9_pr__Pay_Transaction__c/fields/Invoice_ID__c.field-meta.xml
<CustomField>
    <fullName>Invoice_ID__c</fullName>
    <formula>CASESAFEID(tc9_et__Invoice_Item__r.tc9_et__Invoice__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice ID</label>
    <type>Text</type>
</CustomField>