.vscode/allianceuat_compare/force-app/main/default/objects/tc9_pr__Pay_Transaction__c/fields/Is_Reversed__c.field-meta.xml
<CustomField>
    <fullName>Is_Reversed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Reversed</label>
    <type>Checkbox</type>
</CustomField>