.vscode/allianceuat_compare/force-app/main/default/objects/tc9_pr__Pay_Transaction__c/fields/Marked_For_Deletion__c.field-meta.xml
<CustomField>
    <fullName>Marked_For_Deletion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Marked For Deletion</label>
    <type>Checkbox</type>
</CustomField>