.vscode/allianceuat_compare/force-app/main/default/objects/tc9_pr__Pay_Transaction__c/fields/Markup_Margin_Amount__c.field-meta.xml
<CustomField>
    <fullName>Markup_Margin_Amount__c</fullName>
    <formula>IF( 
AND(
tc9_et__Invoice_Rate__c &gt;  tc9_pr__Pay_Rate__c,
 RecordType.DeveloperName = &apos;Expense&apos;),
 (tc9_et__Invoice_Rate__c - tc9_pr__Pay_Rate__c), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Markup / Margin Amount ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>