.vscode/allianceuat_compare/force-app/main/default/objects/tc9_pr__Pay_Transaction__c/fields/Markup_Margin_Applied__c.field-meta.xml
<CustomField>
    <fullName>Markup_Margin_Applied__c</fullName>
    <inlineHelpText>References the OnCost approach set at the client level at the time the pay transaction was created.</inlineHelpText>
    <label>Markup / Margin Applied</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Markup</fullName>
            </value>
            <value>
                <fullName>Margin</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>