.vscode/allianceuat_compare/force-app/main/default/objects/tc9_pr__Pay_Transaction__c/fields/Original_Pay_Transaction__c.field-meta.xml
<CustomField>
    <fullName>Original_Pay_Transaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Original Pay Transaction</label>
    <referenceTo>tc9_pr__Pay_Transaction__c</referenceTo>
    <relationshipLabel>Pay Transactions (Original Pay Transaction)</relationshipLabel>
    <relationshipName>Pay_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>