.vscode/allianceuat_compare/force-app/main/default/objects/tc9_pr__Pay_Transaction__c/fields/Original_Reverse_Transaction_ID__c.field-meta.xml
<CustomField>
    <fullName>Original_Reverse_Transaction_ID__c</fullName>
    <label>Original Reverse - Transaction ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>