.vscode/allianceuat_compare/force-app/main/default/objects/tc9_pr__Pay_Transaction__c/fields/OriginalTSIID__c.field-meta.xml
<CustomField>
    <fullName>OriginalTSIID__c</fullName>
    <label>OriginalTSIID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>