.vscode/allianceuat_compare/force-app/main/default/objects/tc9_pr__Pay_Transaction__c/fields/Payroll_Tax_Payable__c.field-meta.xml
<CustomField>
    <fullName>Payroll_Tax_Payable__c</fullName>
    <description>Payroll Tax Payable Amount</description>
    <formula>tc9_pr__Assignment_Rate__r.tc9_et__Rate_Calculator_Line__r.tc9_et__Payroll_Tax_Payable_Amount__c  *  tc9_pr__Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Payroll Tax Payable Amount from rate calculator line x quantity</inlineHelpText>
    <label>Payroll Tax Payable Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>