.vscode/allianceuat_compare/force-app/main/default/objects/tc9_pr__Pay_Transaction__c/fields/Payroll_Tax_Rate__c.field-meta.xml
<CustomField>
    <fullName>Payroll_Tax_Rate__c</fullName>
    <description>Payroll Tax Invoiceable Rate</description>
    <formula>tc9_pr__Assignment_Rate__r.tc9_et__Rate_Calculator_Line__r.tc9_et__Payroll_Tax_Invoiceable_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Payroll Tax Invoiceable Rate from the rate calculator line</inlineHelpText>
    <label>Payroll Tax Payable Rate %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>