.vscode/allianceuat_compare/force-app/main/default/objects/tc9_pr__Pay_Transaction__c/fields/Qty_converted_to_TOIL__c.field-meta.xml
<CustomField>
    <fullName>Qty_converted_to_TOIL__c</fullName>
    <label>Qty converted to TOIL</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>