.vscode/allianceuat_compare/force-app/main/default/objects/tc9_pr__Pay_Transaction__c/fields/Re_Trigger_Grouping__c.field-meta.xml
<CustomField>
    <fullName>Re_Trigger_Grouping__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used in flow &apos;Pay Transaction On Create&apos; to trigger the custom grouping used in Invoices.</description>
    <label>Re-Trigger Grouping</label>
    <type>Checkbox</type>
</CustomField>