.vscode/allianceuat_compare/force-app/main/default/objects/tc9_pr__Pay_Transaction__c/fields/STP_Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>STP_Payment_Type__c</fullName>
    <formula>text(tc9_pr__Pay_Code__r.tc9_pr__STP_Payment_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>STP Payment Type</label>
    <type>Text</type>
</CustomField>