.vscode/allianceuat_compare/force-app/main/default/objects/tc9_pr__Pay_Transaction__c/fields/Total_Pay_Rate_Costs_Payable_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Pay_Rate_Costs_Payable_Amount__c</fullName>
    <formula>tc9_pr__Pay_Total__c  +  Payroll_Tax_Payable__c  +  Superannuation_Payable_Amount__c  +  Work_Cover_Payable_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Pay Rate + Costs x Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>