.vscode/allianceuat_compare/force-app/main/default/objects/tc9_pr__Pay_Transaction__c/fields/Weekday_or_Weekend__c.field-meta.xml
<CustomField>
    <fullName>Weekday_or_Weekend__c</fullName>
    <formula>CASE(
  WEEKDAY(tc9_pr__Entry_Date__c),
  1, &quot;Weekend&quot;,
  7, &quot;Weekend&quot;,
  &quot;Weekday&quot;
)</formula>
    <label>Weekday or Weekend</label>
    <type>Text</type>
</CustomField>