.vscode/allianceuat_compare/force-app/main/default/objects/tc9_pr__Pay_Transaction__c/fields/WFM_Contract__c.field-meta.xml
<CustomField>
    <fullName>WFM_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The WFM Contract related to this Pay Transaction. This is updated via the custom flow &quot;Pay Transaction on Create&quot; and utilised in custom Invoicing functionality.</description>
    <inlineHelpText>The WFM Contract related to this Pay Transaction. This is updated via the custom flow &quot;Pay Transaction on Create&quot; and utilised in custom Invoicing functionality.</inlineHelpText>
    <label>WFM Contract</label>
    <referenceTo>sirenum__ProActiveContract__c</referenceTo>
    <relationshipLabel>Pay Transactions</relationshipLabel>
    <relationshipName>Pay_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>