.vscode/allianceuat_compare/force-app/main/default/objects/tc9_pr__Pay_Transaction__c/fields/WFM_Location_ID__c.field-meta.xml
<CustomField>
    <fullName>WFM_Location_ID__c</fullName>
    <description>This field is automatically populated during the creation of a Pay Transaction via the &apos;Pay Transaction on Create&apos; flow. It is subsequently used in custom invoice processing.</description>
    <inlineHelpText>This field is automatically populated during the creation of a Pay Transaction via the &apos;Pay Transaction on Create&apos; flow. It is subsequently used in custom invoice processing.</inlineHelpText>
    <label>WFM Location ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>