.vscode/allianceuat_compare/force-app/main/default/objects/tc9_pr__Pay_Transaction__c/fields/Work_Cover_Payable_Amount__c.field-meta.xml
<CustomField>
    <fullName>Work_Cover_Payable_Amount__c</fullName>
    <description>Work Cover Payable Amount</description>
    <formula>tc9_pr__Assignment_Rate__r.tc9_et__Rate_Calculator_Line__r.tc9_et__WorkCover_Payable_Amount__c  *  tc9_pr__Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Work Cover Payable Amount from rate calculator line x quantity</inlineHelpText>
    <label>Work Cover Payable Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>