.vscode/allianceuat_compare/force-app/main/default/objects/tc9_pr__Pay_Transaction__c/fields/Work_Cover_Payable_Rate__c.field-meta.xml
<CustomField>
    <fullName>Work_Cover_Payable_Rate__c</fullName>
    <description>Work Cover Payable Rate %</description>
    <formula>tc9_pr__Assignment_Rate__r.tc9_et__Rate_Calculator_Line__r.tc9_et__WorkCover_Invoiceable_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Work Cover Payable Rate % from rate calculator line</inlineHelpText>
    <label>Work Cover Payable Rate %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>