.vscode/allianceuat_compare/force-app/main/default/objects/tc9_pr__Pay_Transaction__c/listViews/X2c9_Audit.listView-meta.xml
<ListView>
    <fullName>X2c9_Audit</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>tc9_pr__Transaction_Type__c</columns>
    <columns>tc9_pr__Pay_Batch_Manager__c</columns>
    <columns>tc9_pr__Status__c</columns>
    <columns>tc9_pr__Payment_Entity__c</columns>
    <columns>tc9_pr__Pay_Batch__c</columns>
    <columns>tc9_pr__Payee__c</columns>
    <columns>tc9_pr__Schedule__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>tc9_pr__Entry_Date__c</columns>
    <columns>tc9_pr__Pay_Code__c</columns>
    <columns>tc9_pr__Pay_Total__c</columns>
    <columns>tc9_et__Invoice_Group_By_ID__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Invoice_ID__c</field>
        <operation>equals</operation>
        <value>a18Oa00000ROcxUIAT</value>
    </filters>
    <label>2c9 Audit</label>
</ListView>